# linpull

./: .gitignore  Cargo.toml  README.md  config.ini  flake.nix
src/: main.rs  sources.rs
ui/: app_globals.slint  appwindow.slint  download_row.slint  download_status.slint  side_bar.slint
ui/pages/: arch_linux.slint  debian.slint  page.slint  pages.slint  settings.slint
